[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0", "poetry>=0.12"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py39"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError", "TYPE_CHECKING"]
fail_under = 100
show_missing = true

[tool.coverage.run]
source = ["linkding_cli"]

[tool.isort]
known_first_party = "linkding_cli,examples,tests"
multi_line_output = 3
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
platform = "linux"
python_version = "3.10"
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
name = "linkding_cli"
version = "2023.12.0"
description = "A CLI to interact with a linkding instance"
readme = "README.md"
authors = ["Aaron Bach <bachya1208@gmail.com>"]
license = "MIT"
repository = "https://github.com/bachya/linkding-cli"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
packages = [
    { include = "linkding_cli" }
]

[tool.poetry.dependencies]
aiohttp = ">=3.9.0"
aiolinkding = ">=2023.10.0"
frozenlist = "^1.4.0"
python = "^3.10"
shellingham = ">=1.5.4"
typer = {extras = ["all"], version = ">=0.6,<0.10"}
yarl = ">=1.9.2"

[tool.poetry.group.dev.dependencies]
blacken-docs = "^1.12.1"
codespell = "^2.2.2"
coverage = {version = ">=6.5,<8.0", extras = ["toml"]}
darglint = "^1.8.1"
isort = "^5.10.1"
mypy = "^1.2.0"
pre-commit = ">=2.20,<4.0"
pre-commit-hooks = "^4.3.0"
pylint = ">=3.0.2,<4.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pyupgrade = "^3.1.0"
pyyaml = "^6.0.1"
ruff = ">=0.0.261,<0.1.9"
safety = "^2.3.1"
typing-extensions = "^4.8.0"
vulture = "^2.6"
yamllint = "^1.28.0"

[tool.poetry.scripts]
linkding = "linkding_cli.cli:APP"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bachya/linkding_cli/issues"
Changelog = "https://github.com/bachya/linkding_cli/releases"

[tool.pylint.BASIC]
expected-line-ending-format = "LF"

[tool.pylint.DESIGN]
max-attributes = 20

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.MASTER]
ignore = [
  "tests",
]
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.code_style",
  "pylint.extensions.docparams",
  "pylint.extensions.docstyle",
  "pylint.extensions.empty_comment",
  "pylint.extensions.overlapping_exceptions",
  "pylint.extensions.typing",
]

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# too-many-arguments – Typer command can have a lot of arguments
# unnecessary-pass - This can hurt readability
disable = [
  "too-many-arguments",
  "unnecessary-pass",
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.SIMILARITIES]
# Minimum lines number of a similarity.
# We set this higher because of some cases where V2 and V3 functionality are
# similar, but abstracting them isn't feasible.
min-similarity-lines = 8

# Ignore comments when computing similarities.
ignore-comments = true

# Ignore docstrings when computing similarities.
ignore-docstrings = true

# Ignore imports when computing similarities.
ignore-imports = true

[tool.vulture]
min_confidence = 80
paths = ["linkding_cli", "tests"]
verbose = false
